--- a/src/styles.scss
+++ b/src/styles.scss
@@ -503,11 +503,6 @@ div {
   padding: 0;
 }
 
-.answer-list-item .mdc-list-item__primary-text {
-  font-size: 12px;
-  font-weight: $font-weight-bold;
-}
-
 // Mat Table
 
 .mat-mdc-table {
